Rewrite : StringFormatted
org.openrewrite.java.migrate.UpgradeToJava17
  org.openrewrite.java.migrate.lang.StringFormatted